--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/linux,python
 
 ### Linux ###
@@ -117,3 +116,7 @@ ENV/
 /site
 
 # End of https://www.gitignore.io/api/linux,python
+
+# .csv converted dataset files
+UCI_ADL_Binary_Dataset/csv
+*.csv
